[package]
name = "simple_tcp_server"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
#steady_state     = { path = "../../../core", features = ["proactor_nuclei", "prometheus_metrics"], default-features = false }

# for local testing
#steady_state     = { path = "../../../steady-state-stack/core", features = ["proactor_nuclei", "prometheus_metrics"], default-features = true }

steady_state     = {version = "0.1.2", features = ["proactor_tokio"]}
structopt        = "0.3.26"
structopt-derive = "0.4.18"
flexi_logger     = "0.29.6"
log              = "0.4.22"
futures          = "0.3.31"
tokio            = { version = "1.43.0", features = ["full"] }
xxhash-rust      = { version = "0.8.15", features = ["xxh3"] }
difference       = "2.0.0"
fossil-delta     = "0.2.0"
librsync         = "0.2.3"
serde_json       = "1.0.140"
ignore           = "0.4.23"
async-trait = "0.1.88"


[dev-dependencies]
async-std        = {  version = "1.13.0", features = ["attributes"] }
futures-timer    = "3.0.3"
