[package]
name = "ullfs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
ullfs-common = { path = "../ullfs-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
serde_json = "1.0.128"
signal-hook = "0.3.17"

[[bin]]
name = "ullfs"
path = "src/main.rs"
