[package]
name = "ullfs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = {version = "0.13", features = ["async_tokio"]}
aya-log = "0.2"
ullfs-common = { path = "../ullfs-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
serde_json = "1.0.128"
signal-hook = "0.3.17"
bytes = "1.8.0"
ignore = "0.4.23"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[[bin]]
name = "ullfs"
path = "src/main.rs"
